# pokemon-console

./: .gitignore  CMakeLists.txt  README.md  client.out  server.out
client/: CMakeLists.txt  duel.cpp  duel.h  enums.h  game.cpp  game.h  main.cpp  move.h  player.cpp  player.h  pokemon.h
server/: CMakeLists.txt  action.h  duel.cpp  duel.h  enums.h  game.cpp  game.h  main.cpp  move.h  player.cpp  player.h  pokemon.h  server.cpp  server.h
server/data/: move.json  pokemon.json
